--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,5 +22,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - images/a_dot_burr.jpeg
-    - images/a_dot_ham.jpeg
+    - assets/images/
+    - assets/fonts/
+    - assets/icons/
+    - assets/voice/
