--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   riverpod: ^2.6.1
   flutter_riverpod: ^2.6.1
+  dots_indicator: ^3.0.0
+  riverpod_generator: ^2.6.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.14
 
 flutter:
   uses-material-design: true
